[tool.poetry]
name = "fabdb_sdk"
version = "0.1.0"
description = ""
authors = ["Rubem Mota <rubemmota89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
