[tool.poetry]
name = "fabdb_sdk"
version = "0.0.1"
description = ""
authors = ["Rubem Mota <rubemmota89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
black = "^22.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]
skip_glob = ["docs/*"]
include_trailing_comma = true
force_grid_wrap = false
combine_as_imports = true
line_length = 79
force_sort_within_sections = true
no_lines_before = "THIRDPARTY"
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "fabdb_sdk"
